# rust-http-proxy

./: Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 4e408926-44d1-4ed6-b613-7937e40e65c3.json  7b0a60d7-3dd7-41b2-82d1-dce61b8e16f1.json  adc9e57c-26c2-4106-b491-b90ce21dc1e0.json
.omc/state/: agent-replay-1fa3d2c4-3f42-4644-81f5-16c65072a3a3.jsonl  agent-replay-7b0a60d7-3dd7-41b2-82d1-dce61b8e16f1.jsonl  agent-replay-adc9e57c-26c2-4106-b491-b90ce21dc1e0.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
.omc/state/sessions/1fa3d2c4-3f42-4644-81f5-16c65072a3a3/: hud-state.json  session-started.json
.omc/state/sessions/7b0a60d7-3dd7-41b2-82d1-dce61b8e16f1/: hud-state.json
.omc/state/sessions/adc9e57c-26c2-4106-b491-b90ce21dc1e0/: hud-state.json  session-started.json
deploy/: install.sh  rust-http-proxy.service
deploy/sysctl.d/: 99-rust-http-proxy.conf
docs/: DESIGN.md  METRICS.md  OBSERVABILITY.md  grafana-dashboard.json
src/: config.rs  dns.rs  listener.rs  logger.rs  main.rs  metrics.rs  metrics_server.rs  proxy.rs
