[package]
name = "rust-http-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance HTTP/HTTPS forward proxy with metrics and OpenObserve logging"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP stack (hyper 1.x + util helpers)
hyper = { version = "1.4", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1.7"

# Low-level socket control for SO_REUSEADDR / SO_REUSEPORT
socket2 = { version = "0.5", features = ["all"] }

# Concurrent caches
dashmap = "6.1"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
sysinfo = "0.32"

# HTTP client for OpenObserve uploads
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Misc
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
anyhow = "1"
thiserror = "1"
once_cell = "1.19"
futures = "0.3"
base64 = "0.22"

[profile.release]
# Aggressive optimisation for a network hot-path binary.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
